# windgi-rs

./: Cargo.toml  README.md  deny.toml  search-index.js  settings.html  source-files.js
.github/workflows/: Rust.yml
examples/: blue.rs  brandon.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/traits/collect/: trait.Extend.js  trait.FromIterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/arith/: trait.Sub.js  trait.SubAssign.js
implementors/core/ops/bit/: trait.BitAnd.js  trait.BitAndAssign.js  trait.BitOr.js  trait.BitOrAssign.js  trait.BitXor.js  trait.BitXorAssign.js  trait.Not.js
implementors/core/ops/drop/: trait.Drop.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs  primitives.rs
src/windgi/: lib.rs.html  primitives.rs.html
windgi/: all.html  index.html  sidebar-items.js  struct.BitmapHandle.html  struct.Brush.html  struct.DeviceContext.html  struct.GdiObject.html
windgi/primitives/: index.html  sidebar-items.js  struct.Color.html  struct.RasterOperation.html  struct.Rect.html
